# dbgen

./: .clippy.toml  .gitignore  .travis.yml  CLI.md  Cargo.toml  Dbdbgen.md  DbdbgenTutorial.md  Download.md  LICENSE  README.md  SchemaGen.md  Template.md  TemplateAdvanced.md  build.rs  deny.toml  fuzz.sh  index.html  playground.js  playground_bg.wasm  rustfmt.toml
.github/workflows/: rust.yml
benches/: benchmark.rs
dbdbgen/: Cargo.toml  dbdbgen.libsonnet
dbdbgen/src/: cli.rs  error.rs  jsvm.rs  lib.rs
dbgen-playground/: Cargo.toml  index.html
dbgen-playground/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/fuzz_target_1/: a.seed  b.seed  c.seed  d.seed  e.seed  f.seed  g.seed  h.seed
fuzz/fuzz_targets/: fuzz_target_1.rs
release/: Dockerfile  README.md  coverage.py  package.sh  playground.sh  publish-playground.sh  release.py  release.sh
res/: sysbench_bulk_insert.sql  sysbench_oltp_uniform.sql
res/sysbench/: bulk_insert.sql  oltp_uniform_mysql.sql  oltp_uniform_postgresql.sql  oltp_uniform_sqlite3.sql
res/tpcc/: 0_config.sql  1_item.sql  2_warehouse.sql  3_stock.sql  4_district.sql  5_customer.sql  6_history.sql  7_order.sql  8_new_order.sql  README.md  gen.py  tpcc.jsonnet
src/: array.rs  bytes.rs  cli.rs  error.rs  eval.rs  format.rs  gen.rs  lexctr.rs  lib.rs  number.rs  parser.pest  parser.rs  quote.rs  regex.rs  schemagen_cli.rs  span.rs  value.rs  writer.rs
src/functions/: array.rs  codec.rs  debug.rs  mod.rs  ops.rs  rand.rs  string.rs  time.rs
tests/: check.rs
tests/data/array/: flags.json  result.1.sql  template.sql
tests/data/check_eval_result/: flags.json  result.1.sql  template.sql
tests/data/comment-expr/: flags.json  result.1.sql  template.sql
tests/data/compress/: flags.json  result-schema.sql  result.1.sql.xz  template.sql
tests/data/csv/: flags.json  result-schema.sql  result.1.csv  template.sql
tests/data/derived-tables/: flags.json  template.sql  test.animal-schema.sql  test.animal.1.sql  test.animal.2.sql  test.head-schema.sql  test.head.1.sql  test.head.2.sql  test.limb-schema.sql  test.limb.1.sql  test.limb.2.sql  test.toe-schema.sql  test.toe.1.sql  test.toe.2.sql
tests/data/div-mod/: flags.json  result.1.sql  template.sql
tests/data/escape-backslash/: flags.json  result.1.sql  template.sql
tests/data/expr-in-middle/: result-schema.sql  result.1.sql  template.sql
tests/data/file-size/: a.1000.csv  a.1001.csv  a.2000.csv  a.2001.csv  b.1000.csv  b.1001.csv  b.1002.csv  b.2000.csv  b.2001.csv  b.2002.csv  b.2003.csv  b.2004.csv  b.2005.csv  flags.json  template.sql
tests/data/global-exprs/: flags.json  result.1.sql  template.sql
tests/data/headers-csv/: a.1.csv  a.2.csv  b-schema.sql  b.1.csv  b.2.csv  flags.json  template.sql
tests/data/headers-sql/: a-schema.sql  a.1.sql  a.2.sql  b.1.sql  b.2.sql  flags.json  template.sql
tests/data/jagged-output/: flags.json  result.1.sql  result.2.sql  result.3.sql  template.sql
tests/data/lazy-array/: flags.json  result.1.csv  template.sql
tests/data/rand-finite-float/: result.1.sql  template.sql
tests/data/rand-weighted/: flags.json  result.1.sql  template.sql
tests/data/seeded-hc128/: flags.json  result.1.sql  template.sql
tests/data/shuffle-with-restarts/: flags.json  result.1.sql  result.2.sql  template.sql
tests/data/substring/: result.1.sql  template.sql
tests/data/time-zone/: flags.json  result.1.sql  template.sql
tests/data/uuid/: flags.json  result.1.sql  template.sql
tests/data/zero-children/: flags.json  template.sql  test.a-schema.sql  test.a.1.sql  test.b-schema.sql  test.c-schema.sql
