[package]
name = "dbdbgen"
version = "0.8.0"
authors = ["kennytm <kennytm@gmail.com>"]
edition = "2018"
description = "Generate complete database using dbgen"

[dependencies]
dbgen = { path = "../" }
jsonnet-rs = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
thiserror = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
data-encoding = "2.3"
sha2 = "0.9"
parse-size = "1.0"
