[package]
name = "dbdbgen"
version = "0.8.0"
authors = ["kennytm <kennytm@gmail.com>"]
edition = "2018"
description = "Generate complete database using dbgen"

[dependencies]
dbgen = { path = "../" }
jsonnet-rs = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["string"] }
thiserror = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
data-encoding = "2.4"
sha2 = "0.10"
parse-size = { version = "1.0", features = ["std"] }
