[package]
name = "dbdbgen"
version = "0.8.0"
authors = ["kennytm <kennytm@gmail.com>"]
edition = "2018"
description = "Generate complete database using dbgen"

[dependencies]
dbgen = { path = "../" }
jsonnet-rs = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["string"] }
thiserror = { workspace = true }
rand = { workspace = true }
data-encoding = { workspace = true }
sha2 = "0.10"
parse-size = { workspace = true }
