[package]
name = "dbgen-playground"
version = "0.8.0"
authors = ["kennytm <kennytm@gmail.com>"]
edition = "2018"
description = "dbgen playground"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dbgen = { path = "../", default-features = false }
chrono = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
rand = { workspace = true }
rand_hc = { workspace = true }
serde = { workspace = true }
getrandom = { version = "*", features = ["js"]}